kustomize/todo-list/base/todo-list-from-k-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-from-k
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: todo-list-from-k
